--- a/static/config/config.json
+++ b/static/config/config.json
@@ -1,4 +1,4 @@
 {
 	"map_center": [36.2048, 138.2529],
-	"server_url": "http://localhost:8000"
+	"server_url": "https://random-destination.herokuapp.com"
 }
